# Genesis

./: .gitignore  CHECKPOINT_QUICK_CARD.md  CHECKPOINT_STORAGE_CREATION_RESTORATION.md  CHECKPOINT_VISUAL_DIAGRAMS.md  QUICK_REFERENCE.md  README.md  SIGNUP_MIGRATION_FLOW.md  TECHNICAL_DETAILS.md  TREND_ANALYSIS.md  debug_net.py  debug_net.txt  debug_net_final.txt  deploy_gcp.ps1  package-lock.json  package.json  pnpm-lock.yaml  run-dev.ps1  supabase_schema.sql  syntax_check.py  test_blog.py  test_payload.json
apps/backend/: .env.example  .gcloudignore  .gitignore  .python-version  CACHE_FIELDS_MAPPING.md  DATABASE_TABLES_REFERENCE.md  DATABASE_UNWANTED_TABLES_AUDIT.md  Dockerfile  IMPLEMENTATION_PERFECTION_CHECKLIST.md  IMPLEMENTATION_PERFECTION_GUIDE.md  METRICS_MIGRATIONS_IMPLEMENTATION.md  PIPELINE_VERIFICATION.md  QUICK_START_PERFECTION.md  README.md  ROOT_CAUSE_SUMMARY.md  TEST_GUIDE.md  TONE_DETECTION_GUIDE.md  TREND_ANALYZER_README.md  add_migration_version_columns.py  alembic.ini  audit_all_cache_tables.py  check_db_schema.py  check_env.py  clear_all_cache_tables.py  fix_user_id_type.py  genecis-481617-4dc0049b7bef.json  main.py  package.json  pyproject.toml  remove_final.py  remove_recreated_tables.py  reproduce_crash.py  reproduce_intent_issue.py  requirements.txt  run_migration.py  schemas.py  syntax_check.py  test_agent.py  test_api_endpoint.py  test_checkpoint_context.py  (+20 more)
apps/backend/agents/: blog_writer.py  coordinator.py  executor.py  intent.py  orchestrator.py  planner.py  reviewer.py  safety.py
apps/backend/alembic/: env.py
apps/backend/core/: cache_metrics.py  chatgpt_cache.py  chunking.py  config.py  content_version_service.py  database_validator.py  embeddings.py  guardrails.py  llm_factory.py  local_embeddings.py  logging_handler.py  message_feedback_service.py  rag_service.py  rate_limiter.py  redis.py  response_cache.py  supabase_client.py  token_counter.py  upstash_redis.py  vertex_ai.py  vertex_ai_embeddings.py
apps/backend/database/: audit.py  database.py
apps/backend/docs/: API_IMPROVEMENTS_GUIDE.md  API_REFERENCE.md  CACHING_ARCHITECTURE_VERIFIED.md  CHECKPOINT_FRONTEND_INTEGRATION.md  CODE_CHANGES_DIFF.md  DEPLOYMENT.md  FIXES_IMPLEMENTED.md  IMAGE_POSTING_SUPPORT.md  (+11 more)
(+180 files in other folders)
