[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-core==0.2.38",
    "langchain-google-genai==1.0.10",
    "langgraph==0.2.3",
    "uvicorn>=0.30.0",
    "numpy<2.0.0",
]
dev-dependencies = []