[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.3",
    "uvicorn>=0.30.0",
    "numpy>=2.0.0",
    "redis>=7.1.0",
    "pydantic-settings>=2.12.0",
    "upstash-redis>=1.5.0",
]
dev-dependencies = []