[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-google-vertexai>=2.0.0",
    "langgraph>=0.2.3",
    "uvicorn>=0.30.0",
    "numpy>=2.0.0",
    "redis>=7.1.0",
    "pydantic-settings>=2.0.0",
    "upstash-redis>=1.5.0",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pgvector>=0.2.0",
    # Supabase
    "supabase>=2.4.0",
    "google-cloud-aiplatform>=1.132.0",
    "sentence-transformers>=5.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    # AI Models & LangChain Extensions
    "openai>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-groq>=0.1.0",
    # Utilities
    "textstat>=0.7.3",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
    "cachetools>=5.3.3",
    # Social Media
    "praw>=7.7.1",
    "tweepy>=4.14.0",
]
dev-dependencies = []
